--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/camanjs/4.1.2/caman.full.js"></script>
   </body>
 </html>
