--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -27,6 +27,26 @@
     <title>React App</title>
   </head>
   <body>
+    <svg
+      id="svgfilters"
+      aria-hidden="true"
+      style="position: absolute; width: 0; height: 0; overflow: hidden"
+      version="1.1"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <defs>
+        <filter id="grain">
+          <feTurbulence baseFrequency="0.60,0.90" result="colorNoise" />
+          <feColorMatrix
+            in="colorNoise"
+            type="matrix"
+            values=".33 .33 .33 0 0 .33 .33 .33 0 0 .33 .33 .33 0 0 0 0 0 1 0"
+          />
+          <feComposite operator="in" in2="SourceGraphic" result="monoNoise" />
+          <feBlend in="SourceGraphic" in2="monoNoise" mode="multiply" />
+        </filter>
+      </defs>
+    </svg>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -40,6 +60,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/camanjs/4.1.2/caman.full.js"></script>
+    <script
+      type="module"
+      src="https://cdnjs.cloudflare.com/ajax/libs/camanjs/4.1.2/caman.full.js"
+    ></script>
   </body>
 </html>
